# TrustAgent-Forensics

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  BUSINESS_RULES.md  CONTRIBUTING.md  NHAT_KY.md  README.md  ROADMAP.md  WHY.md  Z3_EXPLAINED.md  claude.md  gemini.md
docs/journal/: 01_TRUOC_KHI_LAM.md  02_DA_HOAN_THANH.md  03_TUONG_LAI.md
src/: __init__.py  config.py
src/agents/: __init__.py  graph.py  nodes.py  state.py  workflow.py
src/database/: __init__.py  models.py  repository.py  session.py
src/rag/: __init__.py  extractor.py  retriever.py
src/rag/legal_data/: KR_refund_law.md  VN_tax_law.md
src/semantic/: __init__.py  parser.py  prompts.py  schemas.py
src/z3_engine/: __init__.py  models.py  solver.py
src/z3_engine/rules/: __init__.py  base_rule.py  kr_refund_rule.py  vn_tax_rule.py
tests/: __init__.py  test_agents.py  test_rag.py  test_semantic_parser.py  test_z3_engine.py
