[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustagent-forensics"
version = "0.1.0"
description = "Neuro-Symbolic AI Governance Platform — Formal verification for AI Agent actions using Z3 Theorem Prover + LLM Semantic Parsing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "UIT INNOSTAR Team", email = "trustagent@uit.edu.vn"},
]
keywords = ["ai-governance", "z3-solver", "neuro-symbolic", "forensics", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "z3-solver>=4.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.5.0",
    "langchain-google-genai>=1.0",
]
agents = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]
all = [
    "trustagent-forensics[llm,agents,api,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
