[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustagent-forensics"
version = "0.1.0"
description = "Neuro-Symbolic AI Governance Platform — Formal verification for AI Agent actions using Z3 Theorem Prover + LLM Semantic Parsing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "VietGamer-UIT", email = "vietgamer.uit@gmail.com"},
]
keywords = ["ai-governance", "z3-solver", "neuro-symbolic", "forensics", "langgraph", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "z3-solver>=4.16.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "google-generativeai>=0.8",
]
agents = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]
all = [
    "trustagent-forensics[llm,agents,api,dev]",
]

[project.urls]
Homepage = "https://github.com/VietGamer-UIT/TrustAgent-Forensics"
Repository = "https://github.com/VietGamer-UIT/TrustAgent-Forensics.git"
Issues = "https://github.com/VietGamer-UIT/TrustAgent-Forensics/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
